--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <title>React Demo</title>
 </head>
 <body>
-<div class="app">
+<div id="root">
 
 </div>
-<script type="text/javascript" src="dist/main.js"></script>
+<script type="text/javascript" src="../dist/vendor.js"></script>
+<script type="text/javascript" src="../dist/main.js"></script>
 </body>
 </html>
